<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmployeeIncidentInfoActivity">

    <Button
        android:id="@+id/backButton"
        android:layout_width="70dp"
        android:layout_height="74dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#FDF6FE"
        android:onClick="backButtonPressed"
        app:icon="@drawable/baseline_arrow_back_24"
        app:iconGravity="textEnd"
        app:iconPadding="0dp"
        app:iconSize="30dp"
        app:iconTint="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="#CFC6DC" />

    <ImageView
        android:id="@+id/imageViewType"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backButton"
        app:srcCompat="@drawable/fire_icon" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/incident_details"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/backButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backButton" />

    <TextView
        android:id="@+id/textViewType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Fire"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewType"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toEndOf="@+id/imageViewType"
        app:layout_constraintTop_toTopOf="@+id/imageViewType" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="32dp"
        android:text="@string/incident_condition_label"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewType" />

    <TextView
        android:id="@+id/textViewCondition"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:text="ACCEPTED"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView28"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView28"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/incident_center_latitude"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView28"
        app:layout_constraintTop_toBottomOf="@+id/textView28" />

    <TextView
        android:id="@+id/textViewLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0.0"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView30"
        app:layout_constraintStart_toStartOf="@+id/textViewCondition"
        app:layout_constraintTop_toTopOf="@+id/textView30" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/incident_center_longitude"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView30"
        app:layout_constraintTop_toBottomOf="@+id/textView30" />

    <TextView
        android:id="@+id/textViewLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0.0"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView32"
        app:layout_constraintStart_toStartOf="@+id/textViewLatitude"
        app:layout_constraintTop_toTopOf="@+id/textView32" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/incident_number_of_reports"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView27"
        app:layout_constraintTop_toBottomOf="@+id/textView27" />

    <TextView
        android:id="@+id/textViewReportsCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="100"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView34"
        app:layout_constraintStart_toStartOf="@+id/textViewRadius"
        app:layout_constraintTop_toTopOf="@+id/textView34" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/incident_average_danger_score"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView34"
        app:layout_constraintTop_toBottomOf="@+id/textView34" />

    <TextView
        android:id="@+id/textViewDangerScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3.0"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView36"
        app:layout_constraintStart_toStartOf="@+id/textViewReportsCount"
        app:layout_constraintTop_toTopOf="@+id/textView36" />

    <Button
        android:id="@+id/button3"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="#3E3E57"
        android:onClick="showReports"
        android:text="@string/view_reports_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView36"
        app:layout_constraintTop_toBottomOf="@+id/textViewDangerScore" />

    <Button
        android:id="@+id/buttonReject"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#B33D3D"
        android:text="@string/reject_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/ButtonAccept"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#64AA78"
        android:text="@string/accept_button"
        app:layout_constraintBottom_toTopOf="@+id/buttonReject"
        app:layout_constraintEnd_toEndOf="@+id/buttonReject"
        app:layout_constraintStart_toStartOf="@+id/buttonReject" />

    <Button
        android:id="@+id/buttonPending"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#3E3E57"
        android:text="@string/pending_button"
        app:layout_constraintBottom_toBottomOf="@+id/buttonReject"
        app:layout_constraintEnd_toEndOf="@+id/buttonReject"
        app:layout_constraintStart_toStartOf="@+id/buttonReject"
        app:layout_constraintTop_toTopOf="@+id/ButtonAccept" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/incident_radius"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView32"
        app:layout_constraintTop_toBottomOf="@+id/textView32" />

    <TextView
        android:id="@+id/textViewRadius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0.0"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView27"
        app:layout_constraintStart_toStartOf="@+id/textViewLongitude"
        app:layout_constraintTop_toTopOf="@+id/textView27"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>